@@ -1214,6 +1214,8 @@ This filter demultiplexes OGG files/data into a set of media PIDs and frames.
 .br
 index (dbl, default: 1.0):     indexing window length (unimplemented, only 0 disables stream probing for duration), 
 .br
+expart (bool, default: false): expose pictures as a dedicated video pid
+.br
 
 .br
 .SH vorbisdec
@@ -7691,7 +7693,7 @@ Authors: GPAC developers, see git repo history (-log)
 .br
 For bug reports, feature requests, more information and source code, visit https://github.com/gpac/gpac
 .br
-build: 1.1.0-DEV-rev919-g2715401c9-master
+build: 1.1.0-DEV-rev933-g4b501c165-master
 .br
 Copyright: (c) 2000-2021 Telecom Paris distributed under LGPL v2.1+ - http://gpac.io
 .br
